--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@react-three/csg": "2.2.0",
     "@react-three/drei": "9.70.0",
     "@react-three/fiber": "8.12.0",
+    "@react-three/postprocessing": "^2.15.0",
     "@react-three/rapier": "1.0.0",
     "gsap": "3.11.5",
+    "leva": "^0.9.35",
     "nice-color-palettes": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reev": "0.10.0",
-    "three": "0.151.3"
+    "three": "0.151.3",
+    "three-stdlib": "^2.23.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
