--- a/package.json
+++ b/package.json
@@ -1,42 +1,40 @@
 {
-  "name": "@tsei/qala",
-  "version": "0.1.0",
-  "description": "",
-  "private": true,
-  "keywords": [],
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "gltf": "cd public && npx gltfjsx ./untitled.gltf",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@react-three/csg": "2.2.0",
-    "@react-three/drei": "9.70.0",
-    "@react-three/fiber": "8.12.0",
-    "@react-three/postprocessing": "^2.15.0",
-    "@react-three/rapier": "1.0.0",
-    "gsap": "3.11.5",
-    "leva": "^0.9.35",
-    "nice-color-palettes": "^3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "reev": "0.10.0",
-    "three": "0.151.3",
-    "three-stdlib": "^2.23.13"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
-  }
+        "name": "@tsei/qala",
+        "version": "0.1.0",
+        "description": "",
+        "private": true,
+        "keywords": [],
+        "type": "module",
+        "scripts": {
+                "dev": "vite",
+                "gltf": "cd public && npx gltfjsx ./untitled.gltf",
+                "build": "tsc && vite build",
+                "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+                "preview": "vite preview"
+        },
+        "dependencies": {
+                "@react-three/drei": "9.70.0",
+                "@react-three/fiber": "8.12.0",
+                "gsap": "3.11.5",
+                "leva": "^0.9.35",
+                "nice-color-palettes": "^3.0.0",
+                "react": "18.2.0",
+                "react-dom": "18.2.0",
+                "reev": "0.10.0",
+                "three": "0.154.0",
+                "three-stdlib": "^2.23.13"
+        },
+        "devDependencies": {
+                "@types/three": "0.154.0",
+                "@types/react": "^18.0.37",
+                "@types/react-dom": "^18.0.11",
+                "@typescript-eslint/eslint-plugin": "^5.59.0",
+                "@typescript-eslint/parser": "^5.59.0",
+                "@vitejs/plugin-react": "^4.0.0",
+                "eslint": "^8.38.0",
+                "eslint-plugin-react-hooks": "^4.6.0",
+                "eslint-plugin-react-refresh": "^0.3.4",
+                "typescript": "^5.0.2",
+                "vite": "^4.3.9"
+        }
 }
