--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-        "name": "@tsei/qala",
+        "name": "@tsei/lapa",
         "version": "0.1.0",
         "description": "",
         "private": true,
